--- a/ui/package.json
+++ b/ui/package.json
@@ -99,7 +99,7 @@
         "build": "yarn tailwind && GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test --coverage",
         "test-watch": "react-scripts test",
-        "lint": "yarn tailwind && NODE_PATH=src eslint src cypress tailwind.config.js",
+        "lint": "yarn tailwind && NODE_PATH=src eslint --ext .js,.ts,.tsx src cypress tailwind.config.js .prettierrc.js .eslintrc.js",
         "cypress-open": "./scripts/cypress.sh open --config defaultCommandTimeout=8000",
         "cypress-demo-open": "./scripts/cypress.sh open --config integrationFolder=cypress/demo",
         "test-e2e-local": "./scripts/cypress.sh run",
@@ -130,19 +130,22 @@
         "@testing-library/jest-dom": "^4.1.0",
         "@testing-library/react": "^9.1.4",
         "@testing-library/react-hooks": "^3.2.1",
+        "@types/jest": "^25.2.3",
+        "@types/node": "^14.0.11",
         "@types/react": "^16.9.35",
+        "@types/react-dom": "^16.9.8",
         "cypress": "^4.7.0",
         "cypress-file-upload": "^3.5.3",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
+        "eslint-config-airbnb-typescript": "^7.2.1",
         "eslint-config-prettier": "6.11.0",
         "eslint-plugin-cypress": "2.11.1",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-jest": "^23.13.2",
         "eslint-plugin-jsx-a11y": "6.2.3",
-        "eslint-plugin-mocha": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^3.0.0",
@@ -163,7 +166,8 @@
         "redux-immutable-state-invariant": "^2.1.0",
         "redux-saga-test-plan": "^3.7.0",
         "storybook-addon-themes": "^5.4.1",
-        "tailwindcss": "^1.4.6"
+        "tailwindcss": "^1.4.6",
+        "typescript": "^3.9.5"
     },
     "browserslist": [
         ">0.2%",
