Fix CI slack notifier by not using is-nightly-tag script (#5885)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1558,7 +1558,8 @@ jobs:
       - run:
           name: Send Slack notification with Workflow link
           command: |
-            if .circleci/is-nightly-tag.sh ; then
+            # Cannot use .circleci/is-nightly-tag.sh because this job doesn't have access to git
+            if [[ "$CIRCLE_TAG" =~ .*-nightly-.* ]]; then
               webhook_url="$NIGHTLY_WORKFLOW_NOTIFY_WEBHOOK"
             elif [[ "$CIRCLE_TAG" =~ ^[[:digit:]]+(\.[[:digit:]]+)*(-rc.[[:digit:]]+)?$ ]]; then
               webhook_url="$RELEASE_WORKFLOW_NOTIFY_WEBHOOK"
