--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3188,6 +3188,7 @@ jobs:
       - STORAGE_CLASS: faster
       - LOAD_BALANCER: lb
       - OUTPUT_FORMAT: helm
+      - ROX_ROCKSDB: true
 
     steps:
       - checkout
@@ -3234,8 +3235,8 @@ jobs:
             kubectl -n stackrox set env deploy/sensor ROX_FAKE_KUBERNETES_WORKLOAD=scale-test
             kubectl -n stackrox patch deploy/sensor -p '{"spec":{"template":{"spec":{"containers":[{"name":"sensor","resources":{"requests":{"memory":"2Gi","cpu":"2"},"limits":{"memory":"12Gi","cpu":"4"}}}]}}}}'
             mkdir /tmp/pprof
-            # 30 min run so that we are confident that the run has completely finished
-            ./scale/profiler/pprof.sh /tmp/pprof "${API_ENDPOINT}" 30
+            # 45 min run so that we are confident that the run has completely finished
+            ./scale/profiler/pprof.sh /tmp/pprof "${API_ENDPOINT}" 45
             zip -r /tmp/pprof.zip /tmp/pprof
 
       - *storeProfilingResults
