update zlib version for rhel rockdb build (#5917)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2737,6 +2737,7 @@ jobs:
                 label: ci-kernel-module-tests
                 run-on-master: true
                 run-on-tags: true
+          use-main-rhel: true # TODO remove before commit
 
   gke-api-upgrade-tests:
     executor: custom
