[ROX-4819, ROX-4935] Add gRPC-WebSocket to rox (#5721)
* Add dependency

* initial work

* remove potentially uunnecessary code

* Trim off wss://

* quickstyle

* Update dependency and test in circleci

* use websocket in scale testing

* map instead of list

* use grpc-http1-websocket library with read size change

* Update websocket library

* Declare slice

* PR updates

* quickstyle

* blacklist websocket errors

* Use latest in latest branch

* use latest change branch

* Testing with latest branch

* Update gomod

* update API endpoint for now

* temp commit

* remove blacklist additions

* revert API endpoint change

* Use latest gRPC-WebSocket and use env var

* add go.sum for now

* fixed go.sum I think...

* revert sensor env var changes

* prefix central endpoint with wss://

* trigger CI

* Update another  spot where central endpoint is used

* Move some wss checks

* forgot to commit context.go

* quickstyle....

* revert change to use settings

* update websocket library version

* latest websocket library version

Co-authored-by: Malte Isberner <mi@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -673,6 +673,10 @@ commands:
         type: boolean
         default: false
 
+      use-websocket:
+        type: boolean
+        default: false
+
     steps:
       - run:
           name: Setup deployment env
@@ -680,6 +684,9 @@ commands:
             <<# parameters.docker-login >>
             docker login -u "$DOCKER_IO_PULL_USERNAME" -p "$DOCKER_IO_PULL_PASSWORD"
             <</ parameters.docker-login >>
+            <<# parameters.use-websocket >>
+            cci-export CLUSTER_API_ENDPOINT "wss://central.stackrox:443"
+            <</ parameters.use-websocket >>
             cci-export REGISTRY_USERNAME "$DOCKER_IO_PULL_USERNAME"
             cci-export REGISTRY_PASSWORD "$DOCKER_IO_PULL_PASSWORD"
             cci-export MAIN_IMAGE_TAG "$(make --quiet tag)"
@@ -2384,7 +2391,8 @@ jobs:
       - *setupRoxctl
       - setup_remote_docker
       - setup-gcp
-      - setup-dep-env
+      - setup-dep-env:
+          use-websocket: true
 
       - attach-gke-cluster:
           cluster-id: api-nongroovy-tests
@@ -3234,7 +3242,8 @@ jobs:
 
       - *setupRoxctl
       - setup-gcp
-      - setup-dep-env
+      - setup-dep-env:
+          use-websocket: true
       - attach-gke-cluster:
           cluster-id: scale-test
       - remove-existing-stackrox-resources
