ROX-5068: Make secret creation for sensor, collector and admission controller optional when deploying using Helm (#5931)

--- a/image/templates/helm/sensorchart/templates/admission-controller-secret.yaml
+++ b/image/templates/helm/sensorchart/templates/admission-controller-secret.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.config.admissionControl.createService }}
+{{ if and .Values.config.admissionControl.createService (eq .Values.config.createSecrets true) }}
 apiVersion: v1
 kind: Secret
 data:
