--- a/image/templates/helm/sensorchart/templates/collector-secret.yaml
+++ b/image/templates/helm/sensorchart/templates/collector-secret.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.config.createSecrets true}}
 apiVersion: v1
 kind: Secret
 data:
@@ -13,3 +14,4 @@ metadata:
   name: collector-tls
   namespace: stackrox
 type: Opaque
+{{ end }}
