[ROX-5128] Add offline mode env to sensor (#5933)
* Add offline mode env to sensor

--- a/image/templates/helm/sensorchart/templates/sensor.yaml
+++ b/image/templates/helm/sensorchart/templates/sensor.yaml
@@ -94,6 +94,8 @@ spec:
         - name: ROX_OPENSHIFT_API
           value: "true"
           {{- end}}
+        - name: ROX_OFFLINE_MODE
+          value: {{.Values.config.offlineMode | quote}}
         {{ range .Values.envVars -}}
         - name: {{ .name }}
           value: {{ .value | quote}}
