--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3287,28 +3287,20 @@ jobs:
       - *setupLicense
 
       - run:
-          name: Launch Central only
+          name: Launch Sensor and Central with scale workload
           command: |
-            ./deploy/k8s/central.sh
-
-            kubectl -n stackrox set env deploy/central MUTEX_WATCHDOG_TIMEOUT_SECS=0
-            kubectl -n stackrox patch deploy/central -p '{"spec":{"template":{"spec":{"containers":[{"name":"central","resources":{"requests":{"memory":"2Gi","cpu":"2"},"limits":{"memory":"12Gi","cpu":"4"}}}]}}}}'
+            ./deploy/k8s/deploy.sh
+            ./scale/launch_workload.sh scale-test
 
             source ./scripts/k8s/export-basic-auth-creds.sh ./deploy/k8s/
             cci-export ROX_USERNAME "$ROX_USERNAME"
             cci-export ROX_PASSWORD "$ROX_PASSWORD"
-            cci-export ROX_RECORDER_DB_CREDS /tmp/gcp.json
-            cci-export MAIN_IMAGE_TAG "$(make --quiet tag)"
 
       - *waitForAPI
 
       - run:
-          name: Launch Sensor
+          name: Collect scale results
           command: |
-            ./deploy/k8s/sensor.sh
-            kubectl -n stackrox set env deploy/sensor MUTEX_WATCHDOG_TIMEOUT_SECS=0
-            kubectl -n stackrox set env deploy/sensor ROX_FAKE_KUBERNETES_WORKLOAD=scale-test
-            kubectl -n stackrox patch deploy/sensor -p '{"spec":{"template":{"spec":{"containers":[{"name":"sensor","resources":{"requests":{"memory":"2Gi","cpu":"2"},"limits":{"memory":"12Gi","cpu":"4"}}}]}}}}'
             mkdir /tmp/pprof
             # 45 min run so that we are confident that the run has completely finished
             ./scale/profiler/pprof.sh /tmp/pprof "${API_ENDPOINT}" 45
