--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
         "file-saver": "^1.3.8",
         "flat": "^4.1.0",
         "formik": "^2.1.4",
+        "framer-motion": "^1.11.1",
         "graphql": "^14.3.1",
         "graphql-tag": "^2.10.3",
         "history": "^4.9.0",
@@ -63,7 +64,6 @@
         "react-numeric-input": "^2.2.3",
         "react-onclickoutside": "^6.8.0",
         "react-popper": "0.9.0",
-        "react-pose": "^4.0.10",
         "react-redux": "^5.0.7",
         "react-responsive": "^8.0.3",
         "react-router-dom": "^4.3.1",
