--- a/image/templates/helm/scannerchart/templates/service.yaml
+++ b/image/templates/helm/scannerchart/templates/service.yaml
@@ -26,7 +26,7 @@ metadata:
     app.kubernetes.io/name: stackrox
 spec:
   ports:
-  - name: db
+  - name: tcp-db
     port: 5432
     targetPort: 5432
   selector:
