--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,46 @@
 run:
-  timeout: 2m
+  timeout: 5m
+
+issues:
+  exclude-use-default: false
+
+  exclude-rules:
+    - linters:
+        - golint
+      text: "should have a package comment, unless it's in another file for this package"
+    - linters:
+        - golint
+      text: "should not use dot imports"
+    - linters:
+        - golint
+      text: "returns unexported type .* which can be annoying to use"
+    - linters:
+        - golint
+      text: "error strings should not be capitalized or end with punctuation or a newline"
 
 linters-settings:
+  golint:
+    min-confidence: 0
+  govet:
+    enable-all: true
+    disable:
+      - shadow
+    settings:
+      printf: # analyzer name, run `go tool vet help` to see all analyzers
+        funcs: # run `go tool vet help printf` to see available settings for `printf` analyzer
+          - Print
+          - Printf
+          - Println
+          - Debug
+          - Debugf
+          - Info
+          - Infof
+          - Warn
+          - Warnf
+          - Error
+          - Errorf
+          - github.com/stackrox/rox/migrator/log.WritetoStderr
+          - github.com/stackrox/rox/migrator/log.WritetoStderrf     -
   gocritic:
     enabled-tags:
       - diagnostic
@@ -18,10 +57,10 @@ linters-settings:
       - importShadow
       - emptyStringTest
   nolintlint:
-    allow-leading-space: true # don't require machine-readable nolint directives (i.e. with no leading space)
+    allow-leading-space: false # require machine-readable nolint directives (i.e. with no leading space)
     allow-unused: false # report any unused nolint directives
     require-explanation: false # don't require an explanation for nolint directives
-    require-specific: false # don't require nolint directives to be specific about which linter is being skipped
+    require-specific: true # require nolint directives to be specific about which linter is being skipped
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
@@ -46,14 +85,14 @@ linters:
     # - godot
     # - godox
     # - goerr113
-    # - gofmt TODO: see if we can migrate our gofmt to this
-    # - goimports TODO: see if we can migrate our goimports to this
-    # - golint TODO: see if we can migrate our golint to this
+    - gofmt
+    - goimports
+    - golint
     # - gomnd
     # - goprintffuncname
     # - gosec
     - gosimple
-    # - govet TODO: see if we can migrate our govet to this
+    - govet
     - ineffassign
     # - interfacer
     # - lll
