Add a basic cluser/deployment monitoring script (#6048)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1566,6 +1566,12 @@ commands:
             <</ parameters.validate-autoupgrade-label >>
             exit 0
 
+      - run:
+          name: Monitor cluster & deployment
+          command: |
+            scripts/ci/deployment-minder.sh
+          background: true
+
   check-backend-changes:
     steps:
       - run:
