ROX-5229: Support token retrieval from file (#6055)
ROX-5229: Add new --token-file command line parameter to roxctl implementing token retrieval from file.

Co-authored-by: Moritz Clasmeier <moritz@stackrox.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2476,6 +2476,11 @@ jobs:
             sleep 1
 
       - run:
+          name: Test roxctl semantics of --token-file parameter
+          command: |
+            API_ENDPOINT="$API_ENDPOINT" ROX_PASSWORD="$ROX_PASSWORD" ./tests/roxctl/token-file.sh
+
+      - run:
           name: API tests
           command: |
             CA="${SERVICE_CA_FILE}" ./tests/yamls/roxctl_verification.sh
