ROX-3890: Use monorepo version of ossls in CI (#6013)

--- a/.ossls.yml
+++ b/.ossls.yml
@@ -3,7 +3,8 @@ gomod:
 
 yarn:
   lockfile: ui/yarn.lock
-  node-modules-dir: ui/node_modules
+  node-modules-dirs:
+    - ui/node_modules
 
 patterns:
   - "*AUTHOR*"
