ROX-5023 compliance benchmarks (#6040)

--- a/scale/image/Dockerfile
+++ b/scale/image/Dockerfile
@@ -15,3 +15,4 @@ COPY ./image/bin/flightreplay /flightreplay
 COPY ./image/docker-entrypoint.sh /docker-entrypoint.sh
 
 COPY ./image/fixtures/scrape.json /files/scrape.json
+COPY ./image/fixtures/results.json /files/results.json
