--- a/ui/package.json
+++ b/ui/package.json
@@ -4,15 +4,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.0.2",
         "@lifeomic/axios-fetch": "^1.4.2",
         "@tippy.js/react": "^3.1.1",
-        "apollo-cache": "^1.3.5",
-        "apollo-cache-inmemory": "^1.6.6",
-        "apollo-client": "^2.6.10",
-        "apollo-link": "^1.2.14",
-        "apollo-link-error": "^1.1.13",
-        "apollo-link-http": "^1.5.17",
-        "apollo-utilities": "^1.3.4",
         "axios": "^0.18.1",
         "computed-style-to-inline-style": "^3.0.0",
         "core-js": "^3.6.5",
@@ -32,8 +26,7 @@
         "flat": "^4.1.0",
         "formik": "^2.1.4",
         "framer-motion": "^1.11.1",
-        "graphql": "^14.3.1",
-        "graphql-tag": "^2.10.3",
+        "graphql": "^15.3.0",
         "history": "^4.9.0",
         "html2canvas": "1.0.0-rc.1",
         "initials": "^3.1.0",
@@ -50,7 +43,6 @@
         "raven-for-redux": "^1.3.1",
         "raven-js": "^3.27.0",
         "react": "^16.13.1",
-        "react-apollo": "^3.1.5",
         "react-collapsible": "^2.8.0",
         "react-color": "^2.18.1",
         "react-copy-to-clipboard": "^5.0.2",
@@ -121,10 +113,10 @@
         "watch:tailwind": "postcss ./src/app.css -o ./src/index.css -w",
         "watch:react": "HTTPS=true react-scripts start",
         "forward": "../scripts/port-forward-ui.sh",
+        "generate-graphql-possible-types": "ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) node scripts/generate-graphql-possible-types.js",
         "eject": "react-scripts eject"
     },
     "devDependencies": {
-        "@apollo/react-testing": "^3.1.4",
         "@babel/core": "^7.10.2",
         "@cypress/code-coverage": "^3.8.1",
         "@cypress/instrument-cra": "^1.1.1",
@@ -159,6 +151,7 @@
         "mocha": "^5.2.0",
         "mocha-junit-reporter": "^1.23.3",
         "mocha-multi-reporters": "^1.1.7",
+        "node-fetch": "^2.6.0",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
         "postcss-cli": "^6.1.3",
