--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3152,25 +3152,29 @@ jobs:
             kubectl -n stackrox set image deploy/central *=stackrox/main:3.0.44.x-7-g633d112298
 
       - *waitForAPI
+
+      - run:
+          name: Take backup of BadgerDB on 44
+          command: |
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db backup --output badgerdb-44-backup.zip
+
       - run:
           name: Set DB to RocksDB
           command: |
             kubectl -n stackrox set env deploy/central ROX_ROCKSDB=true
       - check-stackrox-logs:
           collect: true
-
       - *waitForAPI
+
+      - run:
+          name: Take backup of RocksDB on 44
+          command: |
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db backup --output rocksdb-44-backup.zip
+
       - run:
           name: Set Central image to current SHA
           command: |
             kubectl -n stackrox set image deploy/central "central=stackrox/main:$(make --quiet tag)"
-
-      - *waitForAPI
-      - run:
-          name: Rollback to Badger after migrations have been completed on RocksDB
-          command: |
-            kubectl -n stackrox set env deploy/central ROX_ROCKSDB=false
-
       - *waitForAPI
       - validate-upgrade:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
@@ -3200,18 +3204,6 @@ jobs:
           collect: true
 
       - run:
-          name: Set DB to RocksDB
-          command: |
-            kubectl -n stackrox set env deploy/central ROX_ROCKSDB=true
-
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate Migration to RocksDB"
-      - check-stackrox-logs:
-          collect: true
-
-      - run:
           name: Restore 41.4 backup to current head
           command: |
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file 41.4-upgrade-db.zip --timeout 2m
@@ -3220,6 +3212,46 @@ jobs:
       - validate-upgrade:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
           desc: "Validate 41.4 restore to RocksDB"
+      - check-stackrox-logs:
+          collect: true
+
+      - *bounceCentral
+      - *waitForAPI
+      - validate-upgrade:
+          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
+          desc: "Validate RocksDB Bouncing"
+      - check-stackrox-logs:
+          collect: true
+
+      - run:
+          name: Restore 44 BadgerDB backup to current head
+          command: |
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file badgerdb-44-backup.zip --timeout 2m
+
+      - *waitForAPI
+      - validate-upgrade:
+          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
+          desc: "Validate 44 restore to RocksDB from BadgerDB"
+      - check-stackrox-logs:
+          collect: true
+
+      - *bounceCentral
+      - *waitForAPI
+      - validate-upgrade:
+          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
+          desc: "Validate RocksDB Bouncing"
+      - check-stackrox-logs:
+          collect: true
+
+      - run:
+          name: Restore 44 RocksDB backup to current head
+          command: |
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file rocksdb-44-backup.zip --timeout 2m
+
+      - *waitForAPI
+      - validate-upgrade:
+          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
+          desc: "Validate 44 restore to RocksDB from RocksDB"
       - check-stackrox-logs:
           collect: true
 
@@ -3253,26 +3285,6 @@ jobs:
       - validate-upgrade:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
           desc: "Validate RocksDB Bouncing after restoring"
-      - check-stackrox-logs:
-          collect: true
-
-      - run:
-          name: Roll back to BadgerDB from RocksDB
-          command: |
-            kubectl -n stackrox set env deploy/central ROX_ROCKSDB=false
-
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate restoring from RocksDB to BadgerDB"
-      - check-stackrox-logs:
-          collect: true
-
-      - *bounceCentral
-      - *waitForAPI
-      - validate-upgrade:
-          upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
-          desc: "Validate BadgerDB Bouncing post rollback from RocksDB"
       - check-stackrox-logs:
           collect: true
 
