[roxctl] Introduce log-convert tooling (#6176)

--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -141,6 +141,9 @@ image.scan.long = Scan the specified image and return the fully enriched image. 
 image.short = Commands that you can run on a specific image
 image.long =
 
+log-convert.short =
+log-convert.long =
+
 scanner.generate.short = Generate the required YAML configuration files to deploy StackRox Scanner
 scanner.generate.long = Generate the required YAML configuration files to deploy StackRox Scanner
 
