--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3104,6 +3104,11 @@ jobs:
               exit 1;
             fi
 
+      - run:
+          name: Patch resources
+          command: |
+            kubectl -n stackrox set resources deploy/sensor -c sensor --requests 'cpu=1.1,memory=1.1Gi'
+
       - deploy-sensor-via-upgrader-for-upgrade-tests:
           upgrade-process-id: 060a9fa6-0ed6-49ac-b70c-9ca692614707
           desc: after manually patching webhook
@@ -3115,6 +3120,40 @@ jobs:
               echo "Webhook not patched";
               kubectl -n stackrox get validatingwebhookconfiguration/stackrox -o yaml
               exit 1;
+            fi
+
+      - deploy-sensor-via-upgrader-for-upgrade-tests:
+          upgrade-process-id: 789c9262-5dd3-4d58-a824-c2a099892bd7
+          desc: with yet another new ID
+
+      - run:
+          name: Verify resources were patched back by the upgrader
+          command: |
+            resources="$(kubectl -n stackrox get deploy/sensor -o 'jsonpath=cpu={.spec.template.spec.containers[?(@.name=="sensor")].resources.requests.cpu},memory={.spec.template.spec.containers[?(@.name=="sensor")].resources.requests.memory}')"
+            if [[ "$resources" != 'cpu=1,memory=1Gi' ]]; then
+              echo "Resources ($resources) not patched back!"
+              kubectl -n stackrox get deploy/sensor -o yaml
+              exit 1
+            fi
+
+      - run:
+          name: Patch resources and add preserve resources annotation
+          command: |
+            kubectl -n stackrox annotate deploy/sensor "auto-upgrade.stackrox.io/preserve-resources=true"
+            kubectl -n stackrox set resources deploy/sensor -c sensor --requests 'cpu=1.1,memory=1.1Gi'
+
+      - deploy-sensor-via-upgrader-for-upgrade-tests:
+          upgrade-process-id: 789c9262-5dd3-4d58-a824-c2a099892bd8
+          desc: after patching resources with preserve annotation
+
+      - run:
+          name: Verify resources were not patched back by the upgrader
+          command: |
+            resources="$(kubectl -n stackrox get deploy/sensor -o 'jsonpath=cpu={.spec.template.spec.containers[?(@.name=="sensor")].resources.requests.cpu},memory={.spec.template.spec.containers[?(@.name=="sensor")].resources.requests.memory}')"
+            if [[ "$resources" != 'cpu=1100m,memory=1181116006400m' ]]; then
+              echo "Resources ($resources) appear patched back!"
+              kubectl -n stackrox get deploy/sensor -o yaml
+              exit 1
             fi
 
       - remove-existing-stackrox-resources
