[scripts] Pipe output through log encoder (#6199)

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -77,4 +77,6 @@ VOLUME /tmp
 RUN mkdir -p /stackrox/data && chown -R 4000:4000 /stackrox/data
 VOLUME /stackrox/data
 
+RUN ln -s /assets/downloads/cli/roxctl-linux /stackrox/roxctl
+
 USER 4000:4000
