ROX-5303: Implement kernel-support-available property in central (#6149)
ROX-5303
New feature flag for slim collector mode.
Implement endpoint for retrieving kernel-support-available property from central.
Refactor central's usage of kernel probe sources.
Extend interfaces for kernel probe sources to include mechanism for availability check.
Retrieve the kernel-support-available property in frontend (hidden behind feature flag) and display toggle in cluster edit form.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2436,6 +2436,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE_ENFORCE_ON_UPDATE: true
       - ROX_POLICY_IMPORT_EXPORT: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - checkout
@@ -2664,6 +2665,7 @@ jobs:
       - ROX_POLICY_IMPORT_EXPORT: true
       - ROX_CURRENT_USER_INFO: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - checkout
@@ -2735,6 +2737,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - run-qa-tests:
@@ -2756,6 +2759,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SENSOR_DETECTION: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - checkout
@@ -2789,6 +2793,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_SERVICE: true
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - run-qa-tests:
@@ -2819,6 +2824,7 @@ jobs:
       - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_ROCKSDB: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - run-qa-tests:
@@ -3469,6 +3475,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SENSOR_DETECTION: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - run-openshift-tests:
@@ -3487,6 +3494,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SENSOR_DETECTION: true
       - ROX_AUTH_TEST_MODE_UI: true
+      - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
 
     steps:
       - run-openshift-tests:
